--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ firebase-debug.log
 firebase-debug.*.log
 .firebase/
 firebase-export-*.json
+lake-booking-site-firebase-adminsdk-*.json
 
 # Logs
 logs
