--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ firebase-debug.log
 firebase-debug.*.log
 .firebase/
 firebase-export-*.json
+# Firebase service account files (keep local, never commit)
 lake-booking-site-firebase-adminsdk-*.json
 
 # Logs
